# Codespace

./: README.txt  arbol.py
1_Arbol_Monticulos.py/: main.py  montiqulo.py  nodo.py
1_Arbol_Monticulos_heapq/: arista.py  grafo.py
1_cosillas/Ejemplo_Grafo_Sencillo/: Graph.py  main_ejemplo.py
1_cosillas/huffman-python/: README.md  huffma.experiment.py  pyproject.toml
1_cosillas/huffman-python/src/: main.py
1_cosillas/huffman-python/src/huffman/: __init__.py  decoder.py  encoder.py
2_Djikstra/: Ruben_sin_heap.py  dijkstra_1.py  djikstra.py  gemini_CON_aux.py  gemini_SIN_aux.py
2_Grafo_Generico/: grafo_gen.py
2_Monticulos/: babaabd.py  monti.py
3_BB/: algoritmos_dijkstra_floyd_esqueleto.ipynb  algoritmos_dijkstra_floyd_manual.ipynb
3_IMPORTANTISIMO/: TAD_grafo_esqueleto.ipynb  algoritmos_grafos_networkx.ipynb  comparacion_grafos.ipynb  monticulo_enunciado.ipynb  monticulo_resuelto.ipynb
4_APUNTES_DIJKSTRA_CLAUDE/: README.md  cheatsheet_visual.py  ejercicio_resuelto_completo.py  ejercicios_practica_examen.py  guia_examen_dijkstra_avl.py  test_autoevaluacion.py
4_creo_q_lo_tengo/: arbol_binario_busqueda.py  dijkstra_2.py  monticulo.py
5_Simplified/: djkstraaa.py
6_chicas/: rosa_3.py
7_DEFINITIVO/: Djkstra_.py  Djkstra_algrano.py  Djkstra_sinpaja.py
7_Teoria_html/: explicacion_dijkstra.html  guia-avl-balanceo.html
8_DEFINITIVO++/: dijkstra_comentado.py  dijkstra_xd_comentado.py
A_MANO/: intento_dijkstra.py
Ejemplo_Grafo_dirigido/: ejemplo_grafo_dirigido.py
problema_de_la_mochila/: metododereconstruccionmaselegante.py  mochila.py
(+19 files in other folders)
