[tool.poetry]
name = "huffman-python"
version = "0.1.0"
description = "A Python project for Huffman encoding and decoding."
authors = ["Tu Nombre <tu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"